// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marks should handle different markFontSize 1`] = `
<div
  class="rc-slider rc-slider-with-marks"
>
  <div
    class="rc-slider-rail"
  />
  <div
    class="rc-slider-track rc-slider-track-1"
    style="visibility:visible;left:0%;width:30%;"
  />
  <div
    class="rc-slider-step"
  >
    <span
      class="rc-slider-dot rc-slider-dot-active"
      style="left:0%;"
    />
    <span
      class="rc-slider-dot rc-slider-dot-active"
      style="left:30%;"
    />
    <span
      class="rc-slider-dot"
      style="left:100%;"
    />
  </div>
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="rc-slider-handle rc-slider-handle-1"
    role="slider"
    style="left:0%;"
    tabindex="0"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="rc-slider-handle rc-slider-handle-2"
    role="slider"
    style="left:30%;"
    tabindex="0"
  />
  <div
    class="rc-slider-mark"
  >
    <span
      class="rc-slider-mark-text rc-slider-mark-text-active"
      style="width:29.250px;margin-left:-14.625px;left:0%;font-size:15px;"
    >
      zero
    </span>
    <span
      class="rc-slider-mark-text rc-slider-mark-text-active"
      style="width:16.800px;margin-left:-8.4px;left:30%;font-size:15px;"
    >
      30
    </span>
    <span
      class="rc-slider-mark-text"
      style="width:25.200px;margin-left:-12.6px;left:100%;font-size:15px;"
    >
      100
    </span>
  </div>
</div>
`;

exports[`marks should position mark correctly when slider is horizontal 1`] = `
<div
  class="rc-slider rc-slider-with-marks"
>
  <div
    class="rc-slider-rail"
  />
  <div
    class="rc-slider-track rc-slider-track-1"
    style="visibility:visible;left:0%;width:30%;"
  />
  <div
    class="rc-slider-step"
  >
    <span
      class="rc-slider-dot rc-slider-dot-active"
      style="left:0%;"
    />
    <span
      class="rc-slider-dot rc-slider-dot-active"
      style="left:30%;"
    />
    <span
      class="rc-slider-dot"
      style="left:100%;"
    />
  </div>
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="rc-slider-handle rc-slider-handle-1"
    role="slider"
    style="left:0%;"
    tabindex="0"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="rc-slider-handle rc-slider-handle-2"
    role="slider"
    style="left:30%;"
    tabindex="0"
  />
  <div
    class="rc-slider-mark"
  >
    <span
      class="rc-slider-mark-text rc-slider-mark-text-active"
      style="width:5.600px;margin-left:-2.8px;left:0%;font-size:10px;"
    >
      0
    </span>
    <span
      class="rc-slider-mark-text rc-slider-mark-text-active"
      style="width:11.200px;margin-left:-5.6px;left:30%;font-size:10px;"
    >
      30
    </span>
    <span
      class="rc-slider-mark-text"
      style="width:16.800px;margin-left:-8.4px;left:100%;font-size:10px;"
    >
      100
    </span>
  </div>
</div>
`;

exports[`marks should position mark correctly when slider is vertical 1`] = `
<div
  class="rc-slider rc-slider-with-marks rc-slider-vertical"
>
  <div
    class="rc-slider-rail"
  />
  <div
    class="rc-slider-track rc-slider-track-1"
    style="visibility:visible;bottom:0%;height:30%;"
  />
  <div
    class="rc-slider-step"
  >
    <span
      class="rc-slider-dot rc-slider-dot-active"
      style="bottom:0%;"
    />
    <span
      class="rc-slider-dot rc-slider-dot-active"
      style="bottom:30%;"
    />
    <span
      class="rc-slider-dot"
      style="bottom:100%;"
    />
  </div>
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="rc-slider-handle rc-slider-handle-1"
    role="slider"
    style="bottom:0%;"
    tabindex="0"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="rc-slider-handle rc-slider-handle-2"
    role="slider"
    style="bottom:30%;"
    tabindex="0"
  />
  <div
    class="rc-slider-mark"
  >
    <span
      class="rc-slider-mark-text rc-slider-mark-text-active"
      style="margin-bottom:-50%;bottom:0%;"
    >
      0
    </span>
    <span
      class="rc-slider-mark-text rc-slider-mark-text-active"
      style="margin-bottom:-50%;bottom:30%;"
    >
      30
    </span>
    <span
      class="rc-slider-mark-text"
      style="margin-bottom:-50%;bottom:100%;"
    >
      100
    </span>
  </div>
</div>
`;
